--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${rootProject.ext.versions.kotlin}"
-    implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.core:core-ktx:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.versions.viewmodel}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.versions.viewmodel}"
@@ -34,10 +34,12 @@ dependencies {
 
     //cardview
     implementation "androidx.cardview:cardview:${rootProject.ext.versions.cardview}"
-    implementation "com.google.code.gson:gson:${rootProject.ext.versions.gson}"
 
     //networking
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.versions.retrofit}"
+    implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.versions.retrofit}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.versions.okhttpLoggingInterceptorVersion}"
+    implementation "com.google.code.gson:gson:${rootProject.ext.versions.gson}"
 
     //database
     implementation "androidx.room:room-runtime:${rootProject.ext.versions.room}"
