--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -28,6 +29,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.versions.viewmodel}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.versions.viewmodel}"
+    implementation "androidx.lifecycle:lifecycle-runtime:${rootProject.ext.versions.viewmodel}\""
 
     //recyclerview
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.versions.recyclerview}"
@@ -38,13 +40,33 @@ dependencies {
     //networking
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.versions.retrofit}"
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.versions.retrofit}"
+    implementation "com.squareup.retrofit2:retrofit-mock:${rootProject.ext.versions.retrofit}"
     implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.versions.okhttpLoggingInterceptorVersion}"
     implementation "com.google.code.gson:gson:${rootProject.ext.versions.gson}"
 
+    //WorkManager
+    implementation "androidx.work:work-runtime-ktx:${rootProject.ext.versions.work_manager}"
+
+    //ViewPager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta04'
+
+    //Glide loading images
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
     //database
     implementation "androidx.room:room-runtime:${rootProject.ext.versions.room}"
-    annotationProcessor "androidx.room:room-compiler:${rootProject.ext.versions.room}"
+    kapt "androidx.room:room-compiler:${rootProject.ext.versions.room}"
     implementation "androidx.room:room-ktx:${rootProject.ext.versions.room}"
+
+    //Dagger
+    implementation "com.google.dagger:dagger:${rootProject.ext.versions.dagger}"
+    kapt "com.google.dagger:dagger-compiler:${rootProject.ext.versions.dagger}"
+    implementation "com.google.dagger:dagger-android-support:${rootProject.ext.versions.dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${rootProject.ext.versions.dagger}"
+
+    //Material design
+    implementation "com.google.android.material:material:${rootProject.ext.versions.material}"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
